--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -68,17 +68,17 @@ steps:
         fi
 
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
-    id: "Smoke test /health"
+    id: "Smoke test /ready"
     entrypoint: bash
     args:
       - "-c"
       - |
         set -euo pipefail
         URL=$(gcloud run services describe ${_SERVICE} --project ${_PROJECT} --region ${_REGION} --format='value(status.url)' )
-        echo "Smoke test -> $$URL/health"
-        code=$(curl -s -o /dev/null -w "%{http_code}" "$$URL/health")
-        test "$$code" = "200" || { echo "❌ /health devolvió $code"; exit 1; }
-        echo "✅ /health OK"
+        echo "Smoke test -> $$URL/ready"
+        code=$(curl -s -o /dev/null -w "%{http_code}" "$$URL/ready")
+        test "$$code" = "200" || { echo "❌ /ready devolvió $code"; exit 1; }
+        echo "✅ /ready OK"
 
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
     id: "Make public (optional)"
