--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@ svc.patched.json
 34.8.179.162
 out_tts.mp3
 routes/ops_routes.py.bak.*
+
+# Local backups y experimentales
+*.bak.*
+routes/health_ext.py
