--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,98 +1,41 @@
-# cloudbuild.yaml · baseline reproducible para Cloud Run
-timeout: "1200s"
-
 substitutions:
-  _SERVICE: "natacha-api"
-  _REGION: "us-central1"
-  _PROJECT: "asistente-sebastian"
-  _DOCKER_IMAGE: "natacha-api"
-  _REPO: "natacha"
-  _PLATFORM: "managed"
-  _CPU: "1"
-  _MEM: "512Mi"
-  _CONCURRENCY: "80"
-  _MIN_INSTANCES: "0"
-  _MAX_INSTANCES: "4"
-  _ALLOW_UNAUTH: "true"
+  _REGION: us-central1
+  _SERVICE: natacha-api
+
+steps:
+  # Build & push con Kaniko (más robusto que docker build en Cloud Build)
+  - name: 'gcr.io/kaniko-project/executor:latest'
+    args:
+      - --destination=us-central1-docker.pkg.dev/$PROJECT_ID/natacha/natacha-api:$BUILD_ID
+      - --cache=true
+      - --cache-repo=us-central1-docker.pkg.dev/$PROJECT_ID/natacha/natacha-api/cache
+      - --use-new-run
+      - --snapshotMode=time
+      - --compressed-caching=true
+    # Si tu Dockerfile NO está en la raíz, agrega: - --dockerfile=path/Dockerfile
+
+  # Deploy a Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'bash'
+    args:
+      - -c
+      - |
+        set -euo pipefail
+        gcloud run deploy "${_SERVICE}" \
+          --region "${_REGION}" \
+          --image "us-central1-docker.pkg.dev/${PROJECT_ID}/natacha/natacha-api:${BUILD_ID}" \
+          --quiet
+
+  # Smoke tests (falla el build si no hay 200)
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'bash'
+    args:
+      - -c
+      - |
+        set -euo pipefail
+        SERVICE_URL="$(gcloud run services describe "${_SERVICE}" --region "${_REGION}" --format='value(status.url)')"
+        export SERVICE_URL
+        ./ci/smoke.sh
 
 options:
   logging: CLOUD_LOGGING_ONLY
-  machineType: "E2_HIGHCPU_8"
-  substitutionOption: ALLOW_LOOSE
-
-steps:
-  - name: "gcr.io/cloud-builders/docker"
-    id: "Build image"
-    args: ["build", "-f", "Dockerfile", "-t", "us-central1-docker.pkg.dev/${_PROJECT}/${_REPO}/${_DOCKER_IMAGE}:${BUILD_ID}", "."]
-
-  - name: "gcr.io/cloud-builders/docker"
-    id: "Push image"
-    args: ["push", "us-central1-docker.pkg.dev/${_PROJECT}/${_REPO}/${_DOCKER_IMAGE}:${BUILD_ID}"]
-
-  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
-    id: "Deploy to Cloud Run"
-    entrypoint: bash
-    args:
-      - "-c"
-      - |
-        set -euo pipefail
-        gcloud run deploy ${_SERVICE} \
-          --project ${_PROJECT} \
-          --region ${_REGION} \
-          --platform ${_PLATFORM} \
-          --image us-central1-docker.pkg.dev/${_PROJECT}/${_REPO}/${_DOCKER_IMAGE}:${BUILD_ID} \
-          --service-account "natacha-firestore-access@${_PROJECT}.iam.gserviceaccount.com" \
-          --cpu ${_CPU} \
-          --memory ${_MEM} \
-          --concurrency ${_CONCURRENCY} \
-          --min-instances ${_MIN_INSTANCES} \
-          --max-instances ${_MAX_INSTANCES} \
-          --port 8080 \
-          --quiet
-
-  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
-    id: "Traffic split (stable 80 / latest 20)"
-    entrypoint: bash
-    args:
-      - "-c"
-      - |
-        set -euo pipefail
-        CURRENT_STABLE=$(gcloud run services describe ${_SERVICE} --project ${_PROJECT} --region ${_REGION} --format="value(status.traffic.percent,status.traffic.revisionName)" | awk '$1==80{print $2}' || true)
-        if [[ -n "$$CURRENT_STABLE" ]]; then
-          gcloud run services update-traffic ${_SERVICE} \
-            --project ${_PROJECT} --region ${_REGION} \
-            --to-revisions $$CURRENT_STABLE=80,LATEST=20 || true
-        else
-          gcloud run services update-traffic ${_SERVICE} \
-            --project ${_PROJECT} --region ${_REGION} \
-            --to-latest || true
-        fi
-
-  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
-    id: "Smoke test /health"
-    entrypoint: bash
-    args:
-      - "-c"
-      - |
-        set -euo pipefail
-        URL=$(gcloud run services describe ${_SERVICE} --project ${_PROJECT} --region ${_REGION} --format='value(status.url)' )
-        echo "Smoke test -> $$URL/health"
-        code=$(curl -s -o /dev/null -w "%{http_code}" "$$URL/health")
-        test "$$code" = "200" || { echo "❌ /health devolvió $code"; exit 1; }
-        echo "✅ /health OK"
-
-  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
-    id: "Make public (optional)"
-    entrypoint: bash
-    args:
-      - "-c"
-      - |
-        set -euo pipefail
-        if [[ "${_ALLOW_UNAUTH}" == "true" ]]; then
-          gcloud run services add-iam-policy-binding ${_SERVICE} \
-            --project ${_PROJECT} --region ${_REGION} \
-            --member="allUsers" --role="roles/run.invoker"
-        fi
-
-images:
-  - "us-central1-docker.pkg.dev/${_PROJECT}/${_REPO}/${_DOCKER_IMAGE}:${BUILD_ID}"
