--- a/.github/workflows/wirecheck.yml
+++ b/.github/workflows/wirecheck.yml
@@ -13,15 +13,23 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install fastapi==0.115.3 uvicorn==0.30.6 pydantic==2.* starlette==0.41.* pytest
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt pytest
+          else
+            pip install fastapi==0.115.3 uvicorn==0.30.6 pydantic==2.* starlette==0.41.* pytest
+          fi
+
       - name: Run wirecheck script
         run: python scripts/check_routers_wired.py
+
       - name: Run OpenAPI tests
         run: pytest -q
