--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   build-and-deploy:
+    permissions:
+      contents: read
+      id-token: write
     runs-on: ubuntu-24.04
     env:
       GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
