--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,22 @@
 name: Deploy to Cloud Run
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
   push:
     branches: [ main ]
 
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
   build-and-deploy:
+    permissions:
+      contents: read
+      id-token: write
+
     runs-on: ubuntu-24.04
+
     env:
       GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
       GCP_REGION: ${{ secrets.GCP_REGION || 'us-central1' }}
@@ -19,48 +28,55 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 1) AUTENTICACIÓN (WIF)
-      - id: auth
-        name: Auth to Google Cloud (WIF)
+      - name: Check OIDC env
+        run: |
+          test -n "$ACTIONS_ID_TOKEN_REQUEST_URL"   && echo "OIDC URL present"   || (echo "NO OIDC URL" && exit 1)
+          test -n "$ACTIONS_ID_TOKEN_REQUEST_TOKEN" && echo "OIDC TOKEN present" || (echo "NO OIDC TOKEN" && exit 1)
+
+      - name: Authenticate to Google Cloud (WIF)
+        id: auth
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
           service_account: ${{ secrets.GCP_SA_EMAIL }}
-          token_format: 'access_token'
+          token_format: access_token
+          create_credentials_file: true
+          export_environment_variables: true
 
-      # 2) Instalar gcloud con project seteado
       - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
+          install_components: 'beta'
 
-      # 3) Docker auth contra GAR
       - name: Configure Docker auth to GAR
         run: gcloud auth configure-docker ${{ env.GCP_REGION }}-docker.pkg.dev --quiet
 
-      # 4) Build & Push (incluye PROJECT en la imagen y en gcloud)
       - name: Build & Push
         run: |
-          if [ -z "${GCP_PROJECT_ID}" ]; then
-            echo "❌ GCP_PROJECT_ID vacío (seteá el secret GCP_PROJECT_ID)"; exit 1
-          fi
           SHA=$(git rev-parse --short HEAD)
           IMAGE="${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${GAR_REPO}/${GAR_IMAGE}:${SHA}"
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-          gcloud builds submit --project "${GCP_PROJECT_ID}" --tag "${IMAGE}"
+          gcloud builds submit --project="${GCP_PROJECT_ID}" --tag="${IMAGE}"
 
-      # 5) Deploy a Cloud Run con SA de runtime
       - name: Deploy to Cloud Run
         env:
           IMAGE: ${{ env.IMAGE }}
         run: |
-          gcloud run deploy "${CLOUD_RUN_SERVICE}"             --project "${GCP_PROJECT_ID}"             --image "${IMAGE}"             --region "${GCP_REGION}"             --platform managed             --service-account "${CLOUD_RUN_SA}"             --allow-unauthenticated
+          gcloud run deploy "${CLOUD_RUN_SERVICE}" \
+            --project "${GCP_PROJECT_ID}" \
+            --image "${IMAGE}" \
+            --region "${GCP_REGION}" \
+            --platform managed \
+            --service-account "${CLOUD_RUN_SA}" \
+            --allow-unauthenticated
 
-      # 6) Smoke tests
-      - name: Post-deploy smoke tests
+      - name: Smoke test /health
         run: |
-          URL=$(gcloud run services describe "${CLOUD_RUN_SERVICE}"             --project "${GCP_PROJECT_ID}"             --region "${GCP_REGION}"             --format='value(status.url)')
+          URL=$(gcloud run services describe "${CLOUD_RUN_SERVICE}" \
+            --project "${GCP_PROJECT_ID}" \
+            --region "${GCP_REGION}" \
+            --format='value(status.url)')
           echo "URL=$URL"
           curl -sS "$URL/health" | tee /tmp/health.json
-          grep -E '"status"\s*:\s*"ok"' /tmp/health.json >/dev/null
-          curl -sS "$URL/openapi.json" | jq '.paths | length'
+          grep -E '"status"\s*:\s*"ok"' /tmp/health.json
