--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,10 @@ jobs:
           SHA=$(git rev-parse --short HEAD)
           IMAGE="${GCP_REGION}-docker.pkg.dev/${GCP_PROJECT_ID}/${GAR_REPO}/${GAR_IMAGE}:${SHA}"
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-          gcloud builds submit --project="${GCP_PROJECT_ID}" --tag="${IMAGE}"
+          gcloud builds submit \
+      --project="${GCP_PROJECT_ID}" \
+      --gcs-source-staging-dir="gs://${GCP_PROJECT_ID}_cloudbuild/source" \
+      --tag="${IMAGE}"
 
       - name: Deploy to Cloud Run
         env:
