ci: unify BASE handling; replace old wirecheck with shell scripts; soften sanity

--- a/.github/workflows/contract.yml
+++ b/.github/workflows/contract.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: sudo apt-get update -y && sudo apt-get install -y jq curl
+      - name: Debug BASE
+        run: |
+          echo "BASE=$BASE"
+          if [ -z "$BASE" ]; then echo "❌ BASE vacío (falta NATACHA_BASE_URL)"; exit 1; fi
+          curl -sf --max-time 10 "$BASE/health" && echo "health: OK"
       - name: Router Wire Check
         run: scripts/router_wire_check.sh
       - name: OpenAPI Selfcheck
