--- a/.github/workflows/contract.yml
+++ b/.github/workflows/contract.yml
@@ -1,19 +1,31 @@
 name: Contract Checks
+
 on:
   push:
   pull_request:
+
 jobs:
   contract:
     runs-on: ubuntu-latest
     env:
-      BASE: ${{ vars.NATACHA_BASE_URL != '' && vars.NATACHA_BASE_URL || secrets.NATACHA_BASE_URL }}
+      NATACHA_BASE_URL: ${{ secrets.NATACHA_BASE_URL }}
+      REPO_BASE_URL: ${{ vars.NATACHA_BASE_URL }}
     steps:
       - uses: actions/checkout@v4
+
       - name: Tools
         run: sudo apt-get update -y && sudo apt-get install -y curl jq
+
+      - name: Export BASE
+        run: |
+          BASE="${NATACHA_BASE_URL:-${REPO_BASE_URL:-https://natacha-api-mkwskljrhq-uc.a.run.app}}"
+          echo "BASE=$BASE" >> "$GITHUB_ENV"
+
       - name: Show BASE
         run: echo "BASE=$BASE"
+
       - name: Ensure executable
         run: chmod +x scripts/openapi_selfcheck.sh || true
+
       - name: Run contract selfcheck
         run: ./scripts/openapi_selfcheck.sh
