ci/health: reconcile Makefile after rebase (#24)
* ci/health: reconcile Makefile after rebase

* ci/health: fallback BASE in Makefile and print it

* ci/health: ensure BASE echo + forced health targets

* ci/health: pass BASE via vars/secrets + debug

* ci(health): use fallback when /memory/search_safe is absent

* ci(health): robust tasks health (auto-discovery + GET/POST + auth)

* ci(health): autodiscovery robusto para tasks (GET/POST, q/query, api/, vN/)

* ci(health): use /v1/tasks/search as canonical endpoint (GET with limit param)

* ci(contract): add router wire & OpenAPI selfcheck aligned with current API

* ci: unify BASE handling; replace old wirecheck with shell scripts; soften sanity

* ci: add lenient router wirecheck and openapi selfcheck (uses BASE)

* ci: wirecheck/contract use bash scripts + BASE from vars/secrets

* ci: add contract_check and wirecheck scripts using live OpenAPI

* ci: fix BASE export for contract and wirecheck workflows

* ci: harden openapi_selfcheck (no aborts mid-check, count-based verdict)

* ci: make router_wire_check verbose + fallbacks + explicit HTTP codes

* ci: wirecheck usa payload con summary + fallback a /v1/memory/add

---------

Co-authored-by: Sebastián Atenor <sebastianatenor@users.noreply.github.com>

--- a/.github/workflows/contract.yml
+++ b/.github/workflows/contract.yml
@@ -1,11 +1,11 @@
-name: Router Wirecheck & OpenAPI Test
+name: Contract Checks
 
 on:
   push:
   pull_request:
 
 jobs:
-  wirecheck:
+  contract:
     runs-on: ubuntu-latest
     env:
       NATACHA_BASE_URL: ${{ secrets.NATACHA_BASE_URL }}
@@ -25,7 +25,7 @@ jobs:
         run: echo "BASE=$BASE"
 
       - name: Ensure executable
-        run: chmod +x scripts/router_wire_check.sh || true
+        run: chmod +x scripts/openapi_selfcheck.sh || true
 
-      - name: Run wirecheck
-        run: ./scripts/router_wire_check.sh
+      - name: Run contract selfcheck
+        run: ./scripts/openapi_selfcheck.sh
