ci: enable workflow_dispatch + harden Secret Checks

--- a/.github/workflows/secret-check.yml
+++ b/.github/workflows/secret-check.yml
@@ -1,22 +1,37 @@
-name: Secret Check
+name: Secret Checks
+
 on:
-  workflow_dispatch:   # ✅ permite ejecutarlo manualmente
+  workflow_dispatch: {}
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+permissions:
+  contents: read
 
 jobs:
   check:
-    runs-on: ubuntu-latest
+    name: Validate GCP service-account secret
+    runs-on: ubuntu-24.04
     env:
       GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
     steps:
-      - name: Verificar que exista el secreto
+      - name: Sanity
+        shell: bash
         run: |
-          if [ -z "$GCP_SA_KEY" ]; then
-            echo "Secret missing" && exit 1
+          set -euo pipefail
+          if [[ -z "${GCP_SA_KEY:-}" ]]; then
+            echo "::error title=Secret missing::GCP_SERVICE_ACCOUNT_KEY is not set"
+            exit 1
           fi
-          echo "Secret present ✅"
+          echo "Secret is set ✅ (value is masked)"
 
-      - name: Escribir a archivo y validar JSON
+      - name: Write to file (masked) & validate JSON
+        shell: bash
         run: |
+          set -euo pipefail
+          umask 077
           printf '%s' "$GCP_SA_KEY" > key.json
           python3 - <<'PY'
 import json
@@ -24,3 +39,7 @@ with open('key.json','r',encoding='utf-8') as f:
     json.load(f)
 print('Valid JSON ✅')
 PY
+
+      - name: Cleanup
+        if: always()
+        run: rm -f key.json
