--- a/.github/workflows/secret-checks.yml
+++ b/.github/workflows/secret-checks.yml
@@ -1,3 +1,5 @@
+# .github/workflows/secret-checks.yml
+
 name: Secret Checks
 
 on:
@@ -6,6 +8,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron: '0 9 * * 1'  # lunes 09:00 UTC
 
 permissions:
   contents: read
@@ -16,7 +20,6 @@ jobs:
     runs-on: ubuntu-24.04
     env:
       GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-
     steps:
       - name: Sanity
         shell: bash
@@ -35,11 +38,11 @@ jobs:
           umask 077
           printf '%s' "$GCP_SA_KEY" > key.json
           python3 - <<'PY'
-          import json
-          with open('key.json','r',encoding='utf-8') as f:
-              json.load(f)
-          print('Valid JSON ✅')
-          PY
+import json
+with open('key.json','r',encoding='utf-8') as f:
+    json.load(f)
+print('Valid JSON ✅')
+PY
 
       - name: Cleanup
         if: always()
