ci: restore workflow_dispatch and keep weekly schedule for Secret Checks

--- a/.github/workflows/secret-checks.yml
+++ b/.github/workflows/secret-checks.yml
@@ -1,15 +1,16 @@
-# .github/workflows/secret-checks.yml
-
 name: Secret Checks
 
 on:
+  # ✅ permite ejecutarlo manualmente (gh workflow run …)
   workflow_dispatch: {}
+  # ✅ corre en PRs y pushes a main
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  # ✅ corrida semanal (lunes 09:00 UTC)
   schedule:
-    - cron: '0 9 * * 1'  # lunes 09:00 UTC
+    - cron: '0 9 * * 1'
 
 permissions:
   contents: read
