Update Secret Checks workflow to version 2
Updated the workflow name and simplified the Python command for JSON validation.

--- a/.github/workflows/secret-checks-v2.yml
+++ b/.github/workflows/secret-checks-v2.yml
@@ -1,16 +1,13 @@
-name: Secret Checks
+name: Secret Checks (v2)
 
 on:
-  # ✅ permite ejecutarlo manualmente (gh workflow run …)
-  workflow_dispatch: {}
-  # ✅ corre en PRs y pushes a main
+  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  # ✅ corrida semanal (lunes 09:00 UTC)
   schedule:
-    - cron: '0 9 * * 1'
+    - cron: '0 9 * * 1'  # lunes 09:00 UTC
 
 permissions:
   contents: read
@@ -38,14 +35,8 @@ jobs:
           set -euo pipefail
           umask 077
           printf '%s' "$GCP_SA_KEY" > key.json
-          python3 - <<'PY'
-import json
-with open('key.json','r',encoding='utf-8') as f:
-    json.load(f)
-print('Valid JSON ✅')
-PY
+          python3 -c "import json,sys; json.load(open('key.json','r',encoding='utf-8')); print('Valid JSON ✅')"
 
       - name: Cleanup
         if: always()
         run: rm -f key.json
-
